--- a/html.html
+++ b/html.html
@@ -2,103 +2,12 @@
 <html>
 	<head>
 		<title>
-			Быстрый выбор сайтов
+			U GOT RICKROLLED
 		</title>
-		<style type="text/css">
-			body{
-				background-color: black;
-				background-repeat: repeat-x;
-				color: green;
-				border: 2px dashed purple;
-				margin: 30px;
-				padding: 20px;
-				text-align: center;
-			}
-			a{
-				color: white;
-				font-size: 60px;
-			}
-			li{
-				text-align: center;
-			}
-		</style>
 	</head>
 	<body>
-		<ul style="border: 2px solid yellow; margin: 30px; border-radius: 34px; padding: 100px;">
-			<li>
-				<h2>
-					<a href="html/list.html">Другие .html
-				</h2>
-			</li>
-			<li>
-				<h2>
-					<a href=https://www.youtube.com>YouTube
-				</h2>
-			</li>
-			
-			<li>
-				<h2>
-					<a href=https://www.virustotal.com/gui/>VirusTotal
-				</h2>
-			</li>
-			
-			<li>
-				<h2>
-					<a href=https://play.google.com/store?hl=ru>Google Play
-				</h2>
-			</li>
-			
-			<li>
-				<h2>
-					<a href=https://www.reddit.com>Reddit
-				</h2>
-			</li>
-			
-			<li>
-				<h2>
-					<a href=https://drive.google.com/drive/my-drive>Google Диск
-				</h2>
-			</li>
-			
-			<li>
-				<h2>
-					<a href=https://aternos.org/server/>Aternos
-				</h2>
-			</li>
-			
-			<li>
-				<h2>
-					<a href=https://www.roblox.com/home>Roblox
-				</h2>
-			</li>
-			
-			<li>
-				<h2>
-					<a href=https://dnevnik.mos.ru/>ЭЖД
-				</h2>
-			</li>
-			
-			<li>
-				<h2>
-					<a href=https://padlet.com/SCHOOL1454/4tw1ybh1chx>Padlet 7M
-				</h2>
-			</li>
-			
-			<li>
-				<h2>
-					<a href=https://misode.github.io>misode
-				</h2>
-			</li>
-			<li>
-				<h2>
-					<a href=https://www.deepl.com/ru/translator>DeepL
-				</h2>
-			</li>
-			<li>
-				<h2>
-					<a href=https://porfirevich.ru>Порфирьевич
-				</h2>
-			</li>
-		</ul>
+		<iframe width="420" height="315"
+src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe>
 	</body>
 </html>
