--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		</title>
 	</head>
 	<body>
-		<p>ГЛЕБ, ШУРУЙ СЕБЯ</p>
-		<iframe width="1600" height="900"
-src="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+		<p>ГЛЕБ, ШУРУЙ СЮДА</p>
+		<iframe width="1280" height="720"
+src="https://www.youtube.com/embed/dQw4w9WgXcQ">
 </iframe>
 	</body>
 </html>
